# SpeakType

./: .gitignore  README.md  start.sh
cleanup_service/: .env.example  graph.py  main.py  requirements.txt  test_cleanup.py
core/: Cargo.toml  config.toml.example  test_parse.rs
core/src/: audio.rs  cleanup.rs  config.rs  focus.rs  inject.rs  main.rs  transcribe.rs
scripts/: setup_whisper.sh
