[package]
name = "speaktype_core"
version = "0.1.0"
edition = "2021"
description = "Cross-application speech-to-text daemon: global hotkey -> audio capture -> local Whisper transcription -> LLM cleanup -> text injection"

[[bin]]
name = "speaktype"
path = "src/main.rs"

[dependencies]
# Global hotkey registration (OS-level, works regardless of focused app)
global-hotkey = "0.6"

# Event loop that global-hotkey needs to pump OS events on
tao = "0.30"

# Audio capture from the default input device
cpal = "0.15"

# WAV file writing (whisper.cpp reads 16kHz mono WAV)
hound = "3.5"

# Simulated keystrokes -> injects text into whatever text box has OS focus
enigo = "0.2"

# Async runtime, used for talking to the local cleanup service and spawning whisper.cpp
tokio = { version = "1", features = ["full"] }

# HTTP client to call the Python cleanup microservice and Whisper server
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "multipart"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config file (hotkey, whisper binary path, model path, cleanup service URL)
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

anyhow = "1"
tracing-appender = "0.2.5"
arboard = "3"

[target."cfg(windows)".dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_System_ProcessStatus"] }

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"

[target."cfg(target_os = \"linux\")".dependencies]
x11rb = "0.13"
